--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-hacker
+theme: "jekyll-theme-hacker"
 title: "Windows 93 JavaScript Documentation"
 title_separator: "-"
 name: "darkphoenix10"
