--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-hacker
 title: "Windows 93 JavaScript Documentation"
+description: "A documentation of Windows 93's JavaScript reated by Domenic Waterdash, Draco, DarkPhoenix10 and 1024x2"
 title_separator: "-"
-name: "darkphoenix10"
